--- a/index.html
+++ b/index.html
@@ -606,8 +606,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<div class="project" style="background-image: url(images/img-1.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://github.com/moshfiqrony/AirlineTicketReservationForSAS">Air Ticket Reservation System for Sunlight Aviation LTD Using Servlet and JSP</a></h3>
-										<h3><a href="#">Demo Video</a></h3>
+										<h3><a href="https://github.com/moshfiqrony/AirlineTicketReservationForSAS">Air Ticket Reservation System for Sunlight Aviation LTD Using PHP</a></h3>
+										<h3><a href="https://youtu.be/Jh3F2kBYTf0">Demo Video</a></h3>
 										<span>Web Application</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
@@ -670,8 +670,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<div class="project" style="background-image: url(images/img-5.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://github.com/moshfiqrony/AirlineTicketReservationMRTeam">Air Ticket Reservation System Using PHP</a></h3>
-										<h3><a href="#">Demo Video</a></h3>
+										<h3><a href="https://github.com/moshfiqrony/AirlineTicketReservationMRTeam">Air Ticket Reservation System Using JSP Servlet</a></h3>
+										<h3><a href="https://youtu.be/Jh3F2kBYTf0">Demo Video</a></h3>
 										<span>Web App</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
