--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					   					<div class="desc">
 						   					<h1 >Hi! <br>I'm <br>Rony</h1>
 						   					<h2>I love to solve<br> programming problems <br> and develope app</h2>
-												<p><a class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
+												<p><a href="https://drive.google.com/file/d/1MCf3WST643wQogW5UFZCH9xLgGYQhn3g/view?usp=sharing" class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -119,7 +119,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					   					<div class="desc">
 						   					<h1>I am <br>a Software Engineer</h1>
 												<h2>I'm interested in Android, Java, C# and Object Oriented Concept</h2>
-												<p><a class="btn btn-primary btn-learn">View Portfolio <i class="icon-briefcase3"></i></a></p>
+												
 											</div>
 					   				</div>
 					   			</div>
