--- a/index.html
+++ b/index.html
@@ -547,6 +547,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<h2 class="colorlib-heading animate-box">Work Experience</h2>
 						</div>
 					</div>
+					
 					<div class="row">
 						<div class="col-md-12">
 				         <div class="timeline-centered">
@@ -558,8 +559,31 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">Teaching Assistant</a> <span>2017 - Present</span></h2>
-					                  <p>•	I am now appointed as Teaching Assistant for the students of CSE Department of IUBAT</p>
+					                  <h2><a href="#">Software Engineer Intern</a> <span>2019 - Present</span></h2>
+							       <p>•	I am now appointed as Software Engineer Intern at <a href='http://getd2.com/'>D2 Pvt. Ltd.</a></p>
+							       <p>In this organization I am working on React, Redux, Routing, Postgressql, Django Rest API and Mnay more library and framework</p>
+					               </div>
+					            </div>
+					         </article>
+
+
+					      </div>
+					   </div>
+				   </div>
+					
+					<div class="row">
+						<div class="col-md-12">
+				         <div class="timeline-centered">
+					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					            <div class="timeline-entry-inner">
+
+					               <div class="timeline-icon color-1">
+					                  <i class="icon-pen2"></i>
+					               </div>
+
+					               <div class="timeline-label">
+					                  <h2><a href="#">Teaching Assistant</a> <span>2017 - 2019</span></h2>
+					                  <p>•	I was appointed as Teaching Assistant for the students of CSE Department of IUBAT</p>
 					               </div>
 					            </div>
 					         </article>
