--- a/index.html
+++ b/index.html
@@ -559,7 +559,30 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">Software Engineer Intern</a> <span>2019 - Present</span></h2>
+					                  <h2><a href="#">Software Engineer</a> <span>2019 May - Present</span></h2>
+							       <p>•	I am now appointed as Software Engineer Intern at <a href='http://getd2.com/'>D2 Pvt. Ltd.</a></p>
+							       <p>In this organization I am working on React, Redux, Routing, Postgressql, Django Rest API and Mnay more library and framework</p>
+					               </div>
+					            </div>
+					         </article>
+
+
+					      </div>
+					   </div>
+				   </div>
+					
+					<div class="row">
+						<div class="col-md-12">
+				         <div class="timeline-centered">
+					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					            <div class="timeline-entry-inner">
+
+					               <div class="timeline-icon color-1">
+					                  <i class="icon-pen2"></i>
+					               </div>
+
+					               <div class="timeline-label">
+					                  <h2><a href="#">Software Engineer Intern</a> <span>2019 Jan - 2019 Apr</span></h2>
 							       <p>•	I am now appointed as Software Engineer Intern at <a href='http://getd2.com/'>D2 Pvt. Ltd.</a></p>
 							       <p>In this organization I am working on React, Redux, Routing, Postgressql, Django Rest API and Mnay more library and framework</p>
 					               </div>
