--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 													<ul>
 														<li>Institution : International University of Business Agriculture and Technology</li>
 														<li>CGPA:3.99 Out Of 4</li>
-														<li>11th Semester Running</li>
+														<li>Graduated in May 2019</li>
 														
 													</ul>
 									        </div>
