--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
 										<p><strong>Hi I'm Md. Moshfiqur Rahman Rony,</strong> To march towards global standard software development in a workplace with opportunities. I love to take logical challenges and like to solve critical programming problems, business solutions or real life problem regarding programming. I am interested in software development (Android, Windows and Web Applications) and solving logical problems.</p>
-										<p>I`m working in JAVA alongside C#, HTML, CSS (With Bootstrap and materialize CSS as well). I have also worked on core PHP development and my last work was on C# windows based application. My first professional working started as an asst. director and motion graphics designer in creative donkey. I also worked as a VFX artist for several projects. I am fluent in graphics, videography and VFX.</p>
+										<p>I`m working in React and Android alongside Django REST API, Antdesign, Material Design, NativeBase IO, React Native and many more, HTML, CSS (With Bootstrap and materialize CSS as well). I have also worked on core PHP development. I also worked as a VFX artist for several projects.</p>
 									</div>
 								</div>
 							</div>
@@ -272,7 +272,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					</div>
 					<div class="row">
 						<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-							<p>I`m working in React and Android alongside Django REST API, Antdesign, Material Design, NativeBase IO, React Native and many more, HTML, CSS (With Bootstrap and materialize CSS as well). I have also worked on core PHP development. I also worked as a VFX artist for several projects. I am fluent in graphics, videography and VFX.</p>
+							<p>I`m working in React and Android alongside Django REST API, Antdesign, Material Design, NativeBase IO, React Native and many more, HTML, CSS (With Bootstrap and materialize CSS as well). I have also worked on core PHP development. I also worked as a VFX artist for several projects.</p>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
