--- a/index.html
+++ b/index.html
@@ -415,8 +415,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 					               <div class="timeline-label">
 					                  <h2><a href="#">Software Engineer</a> <span>2019 May - Present</span></h2>
-							       <p>•	I am now appointed as Software Engineer Intern at <a href='http://getd2.com/'>D2 Pvt. Ltd.</a></p>
-							       <p>In this organization I am working on React, Redux, Routing, Postgressql, Django Rest API and Many more library and framework</p>
+							       <p>•	I am now appointed as Software Engineer at <a href='http://getd2.com/'>D2 Pvt. Ltd.</a></p>
+							       <p>In this organization I am working on React, Redux, Routing, Postgressql, Django Rest API, Android(Using Java and React Native) and many more library and framework</p>
 					               </div>
 					            </div>
 					         </article>
