--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
 						   					<h1>I am <br>a Software Engineer</h1>
-												<h2>I'm interested in Android, Java, C# and Object Oriented Concept</h2>
+												<h2>I'm interested in React, Django Rest Framework, Android and Object Oriented Concept</h2>
 												
 											</div>
 					   				</div>
