--- a/index.html
+++ b/index.html
@@ -23,13 +23,20 @@
 			margin: 0;
 			padding: 0;
 		}
+
+		.main-wrapper {
+			max-width: 580px;
+			margin: 0 auto;
+		}
 	</style>
 </head>
 
 <body>
-	<h1>Hi I am Md. Moshfiqur Rahman Rony</h1>
-	<p>I love to talk on trending zap technology zap, I have huge attraction on telescope Spacex telescope and I am a
-		bit smile mad smile when I code.</p>
+	<div class="main-wrapper">
+		<h1>Hi I am Md. Moshfiqur Rahman Rony</h1>
+		<p>I love to talk on trending technology, I have huge attraction on Spacex and I am a
+			bit mad when I code.</p>
+	</div>
 </body>
 
 </html />
