--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
 			font-family: 'Inter', sans-serif;
 			margin: 0;
 			padding: 0;
+			height: 100vh;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+		}
+
+		.text-center {
+			text-align: center;
 		}
 
 		.main-wrapper {
@@ -33,9 +41,30 @@
 
 <body>
 	<div class="main-wrapper">
-		<h1>Hi I am Md. Moshfiqur Rahman Rony</h1>
-		<p>I love to talk on trending technology, I have huge attraction on Spacex and I am a
-			bit mad when I code.</p>
+		<div>
+			<h1 class="text-center">Hi I am Md. Moshfiqur Rahman Rony</h1>
+			<p class="text-center">Currently working as a Software engineer at <a href="https://twitter.com/worklife_hq">Worklife, Inc.</a>I love to talk on trending technology, I have huge attraction on Spacex and I am a bit mad when I code.</p>
+		</div>
+
+		<div>
+			<h3>Work & Interest</h3>
+			<ul>
+				<li>I mostly work on Python and JavaScript.</li>
+				<li>I like to work on new technologies. Specifically something that is really new to the world.</li>
+				<li>In a project I love to do the architecture design most. No matter it if is for backend or frontend.</li>
+				<li>I love to solve problems in <a href="https://stackoverflow.com/users/9418800/moshfiqrony">Stack Overflow</a>. My current reputation count is 3K+</li>
+				<li>I use <a href="https://code.visualstudio.com/">VS Code</a> as my IDE.</li>
+			</ul>
+		</div>
+
+		<div>
+			<h3>Social accounts</h3>
+			<ul>
+				<li><a href="https://github.com/moshfiqrony">GitHub</a></li>
+				<li><a href="https://twitter.com/moshfiqrony">Twitter</a></li>
+				<li><a href="https://www.linkedin.com/in/moshfiqrony/">Linkedin</a></li>
+			</ul>
+		</div>
 	</div>
 </body>
 
