--- a/index.html
+++ b/index.html
@@ -43,13 +43,26 @@
 	<div class="main-wrapper">
 		<div>
 			<h1 class="text-center">Hi I am Md. Moshfiqur Rahman Rony</h1>
-			<p class="text-center">Currently working as a Software engineer at <a href="https://twitter.com/worklife_hq">Worklife, Inc.</a> I love to talk on trending technology, I have huge attraction on Spacex and I am a bit mad when I code.</p>
+			<p class="text-center">Currently working as a Software engineer at <a href="https://twitter.com/worklife_hq">Worklife, Inc.</a></p>
+		</div>
+
+		<div>
+			<h3>About me</h3>
+			<ul>
+				<li>I am very possesive and obsessed about <a href="https://twitter.com/worklife_hq">Worklife</a>.</li>
+				<li>I believe <a href="https://twitter.com/worklife_hq">Worklife</a> will change the world.</li>
+				<li>Love to talk on trending technologies.</li>
+				<li>Insanely attracted to Spacex.</li>
+				<li>Die hard fan of RDJ</li>
+				<li>Loves MCU</li>
+				<li>I am a bit mad when I code.</li>
+			</ul>
 		</div>
 
 		<div>
 			<h3>Work & Interest</h3>
 			<ul>
-				<li>I mostly work on Python and JavaScript.</li>
+				<li>I mostly work on JavaScript and Python. The frameworks are React and Django</li>
 				<li>I like to work on new technologies. Specifically something that is really new to the world.</li>
 				<li>In a project I love to do the architecture design most. No matter it if is for backend or frontend.</li>
 				<li>I love to solve problems in <a href="https://stackoverflow.com/users/9418800/moshfiqrony">Stack Overflow</a>. My current reputation count is 3K+</li>
