--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			font-family: 'Inter', sans-serif;
 			margin: 0;
 			padding: 0;
-			height: 100vh;
+			min-height: 100vh;
 			display: flex;
 			justify-content: center;
 			align-items: center;
