--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<div>
 			<h3>About me</h3>
 			<ul>
-				<li>I am very possesive and obsessed about <a href="https://twitter.com/worklife_hq">Worklife</a>.</li>
+				<li>I am very possessive and obsessed about <a href="https://twitter.com/worklife_hq">Worklife</a>.</li>
 				<li>I believe <a href="https://twitter.com/worklife_hq">Worklife</a> will change the world.</li>
 				<li>Love to talk on trending technologies.</li>
 				<li>Insanely attracted to Spacex.</li>
