--- a/index.html
+++ b/index.html
@@ -50,8 +50,6 @@
 		<div>
 			<h3>About me</h3>
 			<ul>
-				<li>I am very possessive and obsessed about <a href="https://twitter.com/worklife_hq">Worklife</a>.</li>
-				<li>I believe <a href="https://twitter.com/worklife_hq">Worklife</a> will change the world.</li>
 				<li>Love to talk on trending technologies.</li>
 				<li>Insanely attracted to Spacex.</li>
 				<li>Die hard fan of RDJ.</li>
@@ -76,6 +74,7 @@
 			<h3>Social accounts</h3>
 			<ul>
 				<li><a href="https://github.com/moshfiqrony">GitHub</a></li>
+				<li><a href="https://stackoverflow.com/users/9418800/moshfiqrony">Stack Overflow</a></li>
 				<li><a href="https://twitter.com/moshfiqrony">Twitter</a></li>
 				<li><a href="https://www.linkedin.com/in/moshfiqrony/">Linkedin</a></li>
 			</ul>
